Set code to start position

--- a/static/gem-wizard.html
+++ b/static/gem-wizard.html
@@ -14,6 +14,9 @@
   <script src="./scripts/analytics.js"></script>
   <script src="./scripts/gems.js"></script>
   <script src="./scripts/utilities.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
 
 
 </head>
@@ -254,13 +257,9 @@
     <img class="chat-icon" src="https://res.cloudinary.com/dzynqn10l/image/upload/v1629323205/Bug%20Bash/chat-bubble_gxkmmb.png">
   </div>
 
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-
-
   <script src="./scripts/main.js"></script>
   <script src="./scripts/navigation.js"></script>
-  <!-- <script src="./scripts/heatmap.js"></script> -->
+  <script src="./scripts/heatmap.js"></script>
   <script src="https://code.jquery.com/jquery-1.2.min.js"></script>
 
 </body>
